# hiperhealth-datasets

./: LICENSE  README.md  issue_body.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: add_dataset.yml
.github/workflows/: process_dataset_submission.yml  sync_readme.yml
hiperhealth_datasets/: __init__.py  cli.py  core.py  github_parser.py  models.py
registry/: README.md
registry/eye/: isic.json  sample.json
registry/skin/: isic_2020.json  isic_milk10k.json  sample.json
