[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hiperhealth-datasets"
version = "0.1.0"
description = "Dataset registry system for the HiperHealth library."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
]

[project.scripts]
hdatasets = "hiperhealth_datasets.cli:main"

[tool.setuptools.packages.find]
include = ["hiperhealth_datasets*"]

[project.optional-dependencies]
dev = [
    "pytest",
]
